--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -371,8 +371,8 @@
       "您编辑了连块土地 {estate_id}，名称为“{name}”，描述为“{description}”",
     "edit_estate_parcels_added": "您将 {amount} 地块添加到连块土地 {name}",
     "edit_estate_parcels_removed": "您从连块土地 {name} 中移除了 {amount} 地块",
-    "manage": "您授权{address_link}更新{parcel_link}上的内容",
-    "manage_revoked": "您撤销了允许{address_link}更新{parcel_link}内容的授权",
+    "manage": "您授权{address_link}更新{asset_link}上的内容",
+    "manage_revoked": "您撤销了允许{address_link}更新{asset_link}内容的授权",
     "mortgage_mana": "您{action} {mortgage_contract_link}代表您操作 MANA",
     "mortgage_rcn": "您{action} {mortgage_contract_link}代表您运营 RCN",
     "pay_mortgage": "您部分支付了 {amount} 购买{parcel_link}地块",
