--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -53,6 +53,12 @@
       "price": "价格"
     }
   },
+  "asset_edit": {
+    "errors": {
+      "description_limit": "描述应低于{length}字符",
+      "name_limit": "名称应低于{length}字符"
+    }
+  },
   "asset_manage": {
     "address": "运营商地址",
     "address_permission": "该地址将能够更新此{asset_type}的内容。",
