feat: manage asset

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -62,7 +62,7 @@
     "address_permission":
       "This address will be able to update the contents of this {asset_type}.",
     "give_permission": "Give permission to update contents of {asset_name}.",
-    "manage_asset": "Manage {asset_type}"
+    "manage": "Manage {asset_type}"
   },
   "asset_publish": {
     "already_sold": "This {asset_name} is already on sale for {value}",
