--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -60,7 +60,8 @@
     "errors": {
       "description_limit":
         "La descripción debe ser inferior a {length} caracteres",
-      "name_limit": "El nombre debe ser inferior a {length} caracteres"
+      "name_max_limit": "El nombre debe ser inferior a {length} caracteres",
+      "name_min_limit": "El nombre no puede estar vacío"
     }
   },
   "asset_manage": {
