--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -59,7 +59,8 @@
   "asset_edit": {
     "errors": {
       "description_limit": "説明は{length}文字より小さくする必要があります",
-      "name_limit": "名前は{length}文字よりも小さくする必要があります"
+      "name_max_limit": "名前は{length}文字よりも小さくする必要があります",
+      "name_min_limit": "名前は空ではありません"
     }
   },
   "asset_manage": {
