--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -56,7 +56,8 @@
   "asset_edit": {
     "errors": {
       "description_limit": "描述应低于{length}字符",
-      "name_limit": "名称应低于{length}字符"
+      "name_max_limit": "名称应低于{length}字符",
+      "name_min_limit": "名称不能为空"
     }
   },
   "asset_manage": {
