--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -57,6 +57,13 @@
       "price": "Price"
     }
   },
+  "asset_manage": {
+    "address": "Operator address",
+    "address_permission":
+      "This address will be able to update the contents of this {asset_type}.",
+    "give_permission": "Give permission to update contents of {asset_name}.",
+    "manage": "Manage {asset_type}"
+  },
   "asset_publish": {
     "already_sold": "This {asset_name} is already on sale for {value}",
     "errors": {
@@ -329,13 +336,6 @@
     "warning_tooltip":
       "This will be used to show your scene. Update only if you know what you are doing."
   },
-  "parcel_manage": {
-    "address": "Operator address",
-    "address_permission":
-      "This address will be able to update the contents of this parcel.",
-    "give_permission": "Give permission to update contents of {parcel_name}.",
-    "manage_land": "Manage LAND"
-  },
   "parcel_tags": {
     "adjacent": "Adjacent",
     "district": "District",
@@ -395,9 +395,9 @@
     "edit_estate_parcels_removed":
       "You removed {amount} parcels from estate {name}",
     "manage":
-      "You gave {address_link} permission to update the contents of {parcel_link}",
+      "You gave {address_link} permission to update the contents of {asset_link}",
     "manage_revoked":
-      "You revoked {address_link} permission to update the contents of {parcel_link}",
+      "You revoked {address_link} permission to update the contents of {asset_link}",
     "mortgage_mana":
       "You {action} the {mortgage_contract_link} to operate MANA on your behalf",
     "mortgage_rcn":
