feat: add error message when length is exceeded (#587)
Close #450 
<img width="954" alt="screen shot 2018-10-17 at 3 35 32 pm" src="https://user-images.githubusercontent.com/7549152/47108542-544f3c00-d222-11e8-9f27-494d63269295.png">

--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -56,6 +56,14 @@
       "price": "precio"
     }
   },
+  "asset_edit": {
+    "errors": {
+      "description_limit":
+        "La descripción debe ser inferior a {length} caracteres",
+      "name_max_limit": "El nombre debe ser inferior a {length} caracteres",
+      "name_min_limit": "El nombre no puede estar vacío"
+    }
+  },
   "asset_manage": {
     "address": "Dirección del operador",
     "address_permission":
