--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -57,6 +57,13 @@
       "price": "가격"
     }
   },
+  "asset_edit": {
+    "errors": {
+      "description_limit": "설명은 {length} 자보다 낮아야합니다.",
+      "name_max_limit": "이름은 {length} 자보다 낮아야합니다.",
+      "name_min_limit": "이름은 비워 둘 수 없습니다."
+    }
+  },
   "asset_manage": {
     "address": "운영자 주소",
     "address_permission":
