--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -57,6 +57,14 @@
       "price": "Price"
     }
   },
+  "asset_edit": {
+    "errors": {
+      "description_limit":
+        "The description should be lower than {length} characters",
+      "name_max_limit": "The name should be lower than {length} characters",
+      "name_min_limit": "The name can't be empty"
+    }
+  },
   "asset_manage": {
     "address": "Operator address",
     "address_permission":
