feat: authorize LANDAuction

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -382,6 +382,7 @@
     "authorization_error_contact":
       "If the error persist don't hesitate to contact us",
     "for_buying": "For buying",
+    "for_buying_LANDAuction": "Auction parcels using MANA",
     "for_buying_LegacyMarketplace": "Assets using MANA (legacy)",
     "for_buying_Marketplace": "Assets using MANA",
     "for_buying_MortgageHelper": "LAND by Mortgage",
