--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -375,6 +375,7 @@
     "authorization_error_contact":
       "エラーが解決しない場合は、お手数ですがお問い合わせください",
     "for_buying": "購入に関わる契約",
+    "for_buying_LANDAuction": "MANAを使用したオークションパーセル",
     "for_buying_LegacyMarketplace": "MANAによる資産の扱い（従来）",
     "for_buying_Marketplace": "MANAによる資産の扱い",
     "for_buying_MortgageHelper": "ローンによるLANDの扱い",
