--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -384,6 +384,7 @@
     "authorization_error_contact":
       "Si el error persiste no dudes en contactar con nosotros.",
     "for_buying": "Por comprar",
+    "for_buying_LANDAuction": "Paquetes de subasta usando MANA",
     "for_buying_LegacyMarketplace": "Activos utilizando MANA (legado)",
     "for_buying_Marketplace": "Activos utilizando MANA",
     "for_buying_MortgageHelper": "LAND por hipoteca",
