--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -378,6 +378,7 @@
     "authorization_error_contact":
       "오류가 지속되면 언제든지 Google에 문의하십시오.",
     "for_buying": "구매를 위해",
+    "for_buying_LANDAuction": "MANA를 사용하여 경매 필",
     "for_buying_LegacyMarketplace": "MANA (기존)를 사용하는 애셋",
     "for_buying_Marketplace": "MANA를 사용하는 저작물",
     "for_buying_MortgageHelper": "모기지의 LAND",
