fix: borrower when updating mortgages

--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -272,7 +272,7 @@
     "amount_placeholder": "Monto en MANA",
     "cancel": "Cancelar hipoteca",
     "claim": "Reclamo de paquete",
-    "defaulted_in": "Defecto en",
+    "defaulted_in": "Default",
     "duration": "Duración",
     "duration_placeholder": "Duración en días",
     "errors": {
