--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -267,7 +267,7 @@
     "amount_placeholder": "MANA総額",
     "cancel": "担保をキャンセルする",
     "claim": "区画を請求する",
-    "defaulted_in": "デフォルト設定",
+    "defaulted_in": "デフォルト",
     "duration": "有効期間",
     "duration_placeholder": "有効期限日数",
     "errors": {
