--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -270,7 +270,7 @@
     "amount_placeholder": "MANA의 금액",
     "cancel": "모기지 취소",
     "claim": "소유권 주장 소포",
-    "defaulted_in": "에서 기본값",
+    "defaulted_in": "태만",
     "duration": "지속",
     "duration_placeholder": "기간 (일)",
     "errors": {
