--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -272,7 +272,7 @@
     "amount_placeholder": "Amount in MANA",
     "cancel": "Cancel Mortgage",
     "claim": "Claim parcel",
-    "defaulted_in": "Defaulted in",
+    "defaulted_in": "Default",
     "duration": "Duration",
     "duration_placeholder": "Duration in days",
     "errors": {
