--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -278,7 +278,7 @@
     "amount_placeholder": "Montant à MANA",
     "cancel": "Annuler l'hypothèque",
     "claim": "Demande de parcelle",
-    "defaulted_in": "Par défaut dans",
+    "defaulted_in": "Défaut",
     "duration": "Durée",
     "duration_placeholder": "Durée en jours",
     "errors": {
