--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -258,7 +258,7 @@
     "amount_placeholder": "MANA 金额",
     "cancel": "取消抵押",
     "claim": "认领土地",
-    "defaulted_in": "违约",
+    "defaulted_in": "默认",
     "duration": "持续时间",
     "duration_placeholder": "持续时间以天计",
     "errors": {
