--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -94,6 +94,7 @@
     "your_parcel": "您的地块"
   },
   "auction_page": {
+    "bid": "出价",
     "description": "选择LAND购买",
     "maximum_parcels_message":
       "如果您尝试在单笔交易中购买超过{max}的包裹，那么它将失败。",
