feat: show amout needed for pay

--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -280,6 +280,7 @@
       "deposit_gt_balance": "El depósito requerido es mayor que su saldo",
       "duration_gte_payable":
         "La duración debe ser mayor o igual que la paga en días",
+      "insufficient_funds": "No tienes nada MANA. ",
       "maximum_interest_rate": "La tasa debe ser inferior a {maximum}",
       "minimum_duration": "La duración debe ser mayor a {minimum} días",
       "minimum_interest_rate": "La tasa debe ser mayor que {minimum}",
@@ -292,6 +293,8 @@
     "fetching_data": "Obteniendo datos de hipoteca",
     "interest_rate": "Tasa de interés",
     "interest_rate_placeholder": "Tasa de interés",
+    "network_fee":
+      "Necesita al menos {amount} en su saldo debido a las tarifas de la red",
     "oracle": "Dirección del contrato de Oracle",
     "outstanding_amount": "Monto pendiente",
     "partial_payment": "Pago parcial",
