--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -265,6 +265,7 @@
       "amount_minimum": "金额应该大于 {amount}",
       "deposit_gt_balance": "所需押金大于您的余额",
       "duration_gte_payable": "持续时间应该大于或等于付款期限",
+      "insufficient_funds": "你没有aought MANA。",
       "maximum_interest_rate": "费率应低于 {maximum}",
       "minimum_duration": "持续时间应该大于 {minimum} 天",
       "minimum_interest_rate": "费率应该大于 {minimum}",
@@ -276,6 +277,7 @@
     "fetching_data": "获取抵押贷款数据",
     "interest_rate": "利率",
     "interest_rate_placeholder": "利率",
+    "network_fee": "由于网络费用，您的余额至少需要{amount}",
     "oracle": "Oracle 合同地址",
     "outstanding_amount": "杰出的金额",
     "partial_payment": "部分付款",
