--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -280,6 +280,7 @@
       "deposit_gt_balance": "Required deposit is greater than your balance",
       "duration_gte_payable":
         "Duration should be greater or equal than payable at days",
+      "insufficient_funds": "You don't have anought MANA. Required: {amount}",
       "maximum_interest_rate": "The rate should be lower than {maximum}",
       "minimum_duration": "Duration should be greater than {minimum} days",
       "minimum_interest_rate": "The rate should be greater than {minimum}",
