--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -278,6 +278,7 @@
       "deposit_gt_balance": "필수 입금액이 잔액보다 큽니다.",
       "duration_gte_payable":
         "기간은 며칠에 지불 가능한 것보다 크거나 같아야합니다.",
+      "insufficient_funds": "너는 MANA를 모색하지 않았다. ",
       "maximum_interest_rate": "비율은 {maximum}보다 낮아야합니다.",
       "minimum_duration": "기간은 {minimum} 일 이상이어야합니다.",
       "minimum_interest_rate": "비율은 {minimum}보다 커야합니다.",
@@ -289,6 +290,8 @@
     "fetching_data": "모기지 데이터 가져 오기",
     "interest_rate": "이자율",
     "interest_rate_placeholder": "이자율",
+    "network_fee":
+      "네트워크 비용 때문에 잔액이 적어도 {amount} 이상 필요합니다.",
     "oracle": "오라클 계약 주소",
     "outstanding_amount": "미납금",
     "partial_payment": "부분 지불",
